Support overlay (merged) tracks in session json and from batch commands